# python-service-template

./: DEVELOPMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
deployment/docker_compose/: docker-compose.local.yml
src/python_service_template/: main.py
src/python_service_template/service/api/: check_health_api.py
src/python_service_template/service/middleware/: request_logging.py
src/python_service_template/service/utils/: context_utils.py
src/python_service_template/utils/: logging_utils.py
tests/python_service_template/service/api/: test_health.py
